# Where2Go

./: CMakeLists.txt  CMakePresets.json  README.md
certs/: server.crt  server.key
src/: HTTPSClient.cpp  HTTPSServer.cpp  HTTPSServer.h  main.cpp
src/certs/: server.crt
